objects/Expense__c.object
<CustomObject>
    <description>Object to record expenses that have been incurred by staff performing training</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the account that the referrer belongs to or the account the contact works for</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_AUD__c</fullName>
        <formula>Amount__c/Related_Opportunity__r.Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <inlineHelpText>Enter the amount of for the expense</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_comparator__c</fullName>
        <label>Amount, comparator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Code2__c</fullName>
        <formula>CASE(
Joining_of_Types__c,
&quot;Other Australian&quot;,&quot;5-10253&quot;,
&quot;Other International&quot;,&quot;5-20253&quot;,
&quot;Facilitator fixed fee PF 1 Leader (Australian)&quot;,&quot;1-10201&quot;,
&quot;Facilitator fixed fee PF 2 Leader (Australian)&quot;,&quot;1-10220&quot;,
&quot;Facilitator fixed fee PF 3 Leader (Australian)&quot;,&quot;1-10230&quot;,
&quot;Facilitator fixed fee PF 1 Leader (International)&quot;,&quot;1-20201&quot;,
&quot;Facilitator fixed fee PF 2 Leader (International)&quot;,&quot;1-20220&quot;,
&quot;Facilitator fixed fee PF 3 Leader (International)&quot;,&quot;1-20230&quot;,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code3__c</fullName>
        <formula>CASE(
Joining_of_Types__c,
&quot;Flights International&quot;,&quot;5-20253&quot;,
&quot;Travel Australian&quot;,&quot;5-10250&quot;,
&quot;Travel International&quot;,&quot;5-20250&quot;,
&quot;Travel time Australian&quot;,&quot;1-10109&quot;,
&quot;Travel time International&quot;,&quot;1-20109&quot;,
&quot;Venue Australian&quot;,&quot;5-10251&quot;,
&quot;Venue International&quot;,&quot;5-20251&quot;,
&quot;Freight&quot;,&quot;freight&quot;, 
&quot;Accommodation Australian&quot;,&quot;5-10253&quot;,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code4__c</fullName>
        <formula>CASE(
Joining_of_Types__c,
&quot;Profit commission PF 1 Leader&quot;,&quot;1-20201&quot;,
&quot;Profit commission PF 2 Leader&quot;,&quot;1-20220&quot;,
&quot;Profit commission PF 3 Leader&quot;,&quot;1-20230&quot;,
&quot;Referral / rebate CAANZ&quot;,NULL,
&quot;Referral / rebate Takeda&quot;,NULL,
&quot;Referral / rebate Other&quot;,NULL,
&quot;Meals Australian&quot;,&quot;5-10253&quot;,
&quot;Meals International&quot;,&quot;5-20253&quot;,
&quot;Accommodation International&quot;,&quot;5-20253&quot;,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_as_percentage__c</fullName>
        <label>Commission as percentage</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Converted_Amount__c</fullName>
        <formula>Amount__c *(1/CURRENCYRATE(TEXT(CurrencyIsoCode)))</formula>
        <label>(dep) Converted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <inlineHelpText>Select the date for the expense. If you leave this empty it will use the Proposed start date from the Opportunity.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_mth__c</fullName>
        <formula>MONTH(Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date, month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_yr__c</fullName>
        <formula>YEAR(Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date, year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_effort__c</fullName>
        <inlineHelpText>Enter a number of days here only if the expense is a Facilitator fee.</inlineHelpText>
        <label>Days effort</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_CUR__c</fullName>
        <formula>&quot;AUD&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(dep) Default CUR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Sub_Type__c</fullName>
        <label>Expense Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Expense_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Australian</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>PF 1 Leader (Australian)</fullName>
                </value>
                <value>
                    <fullName>PF 1 Leader (International)</fullName>
                </value>
                <value>
                    <fullName>PF 2 Leader (Australian)</fullName>
                </value>
                <value>
                    <fullName>PF 2 Leader (International)</fullName>
                </value>
                <value>
                    <fullName>PF 3 Leader (Australian)</fullName>
                </value>
                <value>
                    <fullName>PF 3 Leader (International)</fullName>
                </value>
                <value>
                    <fullName>Sell</fullName>
                </value>
                <value>
                    <fullName>Spot</fullName>
                </value>
                <value>
                    <fullName>CAANZ</fullName>
                </value>
                <value>
                    <fullName>PF 1 Leader</fullName>
                </value>
                <value>
                    <fullName>PF 2 Leader</fullName>
                </value>
                <value>
                    <fullName>PF 3 Leader</fullName>
                </value>
                <value>
                    <fullName>Takeda</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Facilitator</fullName>
                    <isActive>false</isActive>
                    <label>Facilitator</label>
                </value>
                <value>
                    <fullName>Freight</fullName>
                    <isActive>false</isActive>
                    <label>Freight</label>
                </value>
                <value>
                    <fullName>Rebate</fullName>
                    <isActive>false</isActive>
                    <label>Rebate</label>
                </value>
                <value>
                    <fullName>Referral</fullName>
                    <isActive>false</isActive>
                    <label>Referral</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expense_Type__c</fullName>
        <inlineHelpText>Select the type of expense</inlineHelpText>
        <label>Expense Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Facilitator fixed fee</fullName>
                </value>
                <value>
                    <fullName>Travel time</fullName>
                </value>
                <value>
                    <fullName>Venue</fullName>
                </value>
                <value>
                    <fullName>Accommodation</fullName>
                </value>
                <value>
                    <fullName>Freight</fullName>
                </value>
                <value>
                    <fullName>Flights</fullName>
                </value>
                <value>
                    <fullName>Meals</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Referral / rebate</fullName>
                </value>
                <value>
                    <fullName>Materials fee split</fullName>
                </value>
                <value>
                    <fullName>Profit fee split</fullName>
                </value>
                <value>
                    <fullName>Services fee split</fullName>
                </value>
                <value>
                    <fullName>Professional services commission</fullName>
                    <isActive>false</isActive>
                    <label>Professional services commission</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expense_chargeable_to_client__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If the client is paying for this expense please check this box.</inlineHelpText>
        <label>Expense chargeable to client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expense_to_be_deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in flows only</description>
        <label>Expense to be deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facilitator_position__c</fullName>
        <label>Facilitator position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>Not related to a facilitator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Line Item</label>
        <referenceTo>invt__Invoice_Line_Item__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoices_received__c</fullName>
        <formula>TEXT(Invoice_Line_Item__r.invt__Invoice__r.Invoices_received__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice(s) received</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Joining_of_Types__c</fullName>
        <description>Text field to correctly code the expense this is not shown to users</description>
        <formula>Text(Expense_Type__c) &amp; &quot; &quot; &amp; Text( Expense_Sub_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not for Users pages</inlineHelpText>
        <label>Joining of Types</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Enter any notes for this expense if required</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Role</label>
        <referenceTo>Opportunity_Role__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_OpportunityProduct_ID__c</fullName>
        <description>Used for processes</description>
        <label>Related OpportunityProduct ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <inlineHelpText>Select the related opportunity that this expense related to</inlineHelpText>
        <label>Related Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
            <filterItems>
                <field>Opportunity.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>In_House</value>
            </filterItems>
            <filterItems>
                <field>Opportunity.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>OC_Course</value>
            </filterItems>
            <filterItems>
                <field>Opportunity.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>OC_Course_profit_split</value>
            </filterItems>
            <filterItems>
                <field>Opportunity.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>OC_Pax</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_receivable_name__c</fullName>
        <description>Used for processes / flows</description>
        <label>Related receivable name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>This field is used to identify the Role that is receiving the expense.</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sell</fullName>
                </value>
                <value>
                    <fullName>Spot</fullName>
                </value>
                <value>
                    <fullName>Facilitator</fullName>
                </value>
                <value>
                    <fullName>Referrer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Select the status for this expense</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <default>true</default>
                    <label>Approved</label>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEMP_expense_and_line_item_Opp_match__c</fullName>
        <formula>Related_Opportunity__c = Invoice_Line_Item__r.invt__Invoice__r.invt__Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TEMP expense and line item Opp match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMP_legacy_fee_split__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TEMP legacy fee split</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Touch__c</fullName>
        <inlineHelpText>Admin only</inlineHelpText>
        <label>Touch</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Xero_ID__c</fullName>
        <formula>IF(ISBLANK(Related_Opportunity__r.Parent_Opportunity__c),Related_Opportunity__r.Xero_ID__c,Related_Opportunity__r.Parent_Opportunity__r.Xero_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Xero ID</label>
        <type>Text</type>
    </fields>
    <label>Expense</label>
    <nameField>
        <displayFormat>E-{000000}</displayFormat>
        <label>Expense ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Account_or_Contact_or_fac_pos</fullName>
        <active>false</active>
        <description>Either Account or Contact or Fac pos must be completed.</description>
        <errorConditionFormula>AND(
ISBLANK(Account__c),
ISBLANK(Contact__c),
ISBLANK(TEXT(Facilitator_position__c))
)</errorConditionFormula>
        <errorMessage>Please select a Facilitator position if this expense is for a facilitator, OR a Contact or Account must be present. Who are we paying this money to? Which company or person? Or both?</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_or_Contact_or_opp_role</fullName>
        <active>true</active>
        <description>Either Account or Contact or Opp Role must be completed.</description>
        <errorConditionFormula>AND(
ISBLANK(Account__c),
ISBLANK(Contact__c),
ISBLANK(Opportunity_Role__c)
)</errorConditionFormula>
        <errorMessage>Please select an Opportuinty Role if this expense is for a facilitator. Otherwise a Contact or Account must be present. Who are we paying this money to? Which company or person? Or both?</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Currency_must_match_Opportunity</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(CurrencyIsoCode) &lt;&gt; TEXT(Related_Opportunity__r.CurrencyIsoCode)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>Currency of expenses must match that of the Opportunity. Please run a conversion on the amount prior to entering the information. Record the exchange rate in the notes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Days_effort_empty</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISBLANK(Days_effort__c),
TEXT(Expense_Type__c) = &quot;Facilitator fixed fee&quot;
)</errorConditionFormula>
        <errorDisplayField>Days_effort__c</errorDisplayField>
        <errorMessage>How many days effort is this facilitator fee for?</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Days_effort_not_empty</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISBLANK(Days_effort__c) = False,
TEXT(Expense_Type__c) &lt;&gt; &quot;Facilitator fixed fee&quot;
)</errorConditionFormula>
        <errorDisplayField>Days_effort__c</errorDisplayField>
        <errorMessage>Days effort should not be entered if the expense type is anything but Facilitator fee. Please empty this field and try again.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Facilitator_fee_position</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
TEXT(Expense_Type__c) = &quot;Facilitator fixed fee&quot;,
TEXT(Expense_Type__c) = &quot;Travel time&quot;
),
ISBLANK(Opportunity_Role__c)
)</errorConditionFormula>
        <errorDisplayField>Facilitator_position__c</errorDisplayField>
        <errorMessage>Which facilitator does this expense relate to? Please relate to an Opportunity Role.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opp_fac_empty</fullName>
        <active>false</active>
        <description>No longer required as we&apos;re using the OppRole instead</description>
        <errorConditionFormula>OR(
AND(
TEXT(Facilitator_position__c) = &quot;1&quot;,
ISBLANK(Related_Opportunity__r.Facilitator_1__c)
),
AND(
TEXT(Facilitator_position__c) = &quot;2&quot;,
ISBLANK(Related_Opportunity__r.Facilitator_2__c)
),
AND(
TEXT(Facilitator_position__c) = &quot;3&quot;,
ISBLANK(Related_Opportunity__r.Facilitator_3__c)
),
AND(
TEXT(Facilitator_position__c) = &quot;4&quot;,
ISBLANK(Related_Opportunity__r.Facilitator_4__c)
)
)</errorConditionFormula>
        <errorDisplayField>Facilitator_position__c</errorDisplayField>
        <errorMessage>To assign this expense to a facilitator, the facilitator needs to already be defined on the Opportunity. Please make sure a facilitator has been defined for this position.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Retainer_and_date_empty</fullName>
        <active>true</active>
        <description>The date can&apos;t be left empty if it&apos;s a retainer. Otherwise the system doesn&apos;t know which invoice to put it against.</description>
        <errorConditionFormula>AND(
OR(
ISBLANK(Date__c),
AND(
MONTH(Date__c) &lt; MONTH(Related_Opportunity__r.CloseDate),
YEAR(Date__c) &lt; YEAR(Related_Opportunity__r.CloseDate)
)
),
TEXT(Related_Opportunity__r.Opportunity_Types__c) = &quot;Consulting / retainer&quot;
)</errorConditionFormula>
        <errorDisplayField>Date__c</errorDisplayField>
        <errorMessage>For expenses on a retainer, please make sure a date has been entered that is greater than or equal to the close date of the Opportunity..</errorMessage>
    </validationRules>
</CustomObject>